# Luma_automation

./: .gitignore  README.md  conftest.py  index.html  pyproject.toml  pytest.ini
.github/workflows/: deploy.yml  luma.yml  push.yml
100/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
100/export/: influxDbData.txt  prometheusData.txt
100/history/: duration-trend.json  history-trend.json  history.json
100/widgets/: categories-trend.json  executors.json  retry-trend.json  severity.json  status-chart.json  summary.json
5/export/: influxDbData.txt
57/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
57/export/: influxDbData.txt  prometheusData.txt
57/history/: duration-trend.json  history-trend.json
57/widgets/: categories-trend.json  executors.json  severity.json  summary.json
58/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
58/export/: influxDbData.txt  prometheusData.txt
58/history/: history.json  retry-trend.json
58/widgets/: categories-trend.json  duration-trend.json  duration.json  executors.json  history-trend.json  severity.json  summary.json
59/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
59/export/: influxDbData.txt  prometheusData.txt
59/history/: categories-trend.json  duration-trend.json  history-trend.json  history.json
59/widgets/: executors.json  retry-trend.json  severity.json  summary.json
60/data/: behaviors.json  suites.csv  (+3 more)
last-history/: history.json  retry-trend.json
tests/: test_luma_automation.py
(+372 files in other folders)
