[tool.poetry]
name = "luma-automation"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "luma_automation"}]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.6.0"
pytest = "^7.2.0"
black = "^22.10.0"
flake8 = "^5.0.4"
webdriver-manager = "^3.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
